[package]
name = "lee"
version = "0.0.9"
authors = ["zetok"]



[dependencies.rstox]
git = "https://github.com/suhr/rstox.git"


[dependencies.markov]
git = "https://github.com/aatxe/markov.git"
rev = "e1a856cb6f186190a50af3b9f7dcb7fcd4d822ad"

[dependencies.chrono]
chrono = "0.2"

[dependencies.rand]
rand = "0.3"
